lustre/osd-ldiskfs/osd_handler.c
@@ -7502,8 +7502,8 @@ static void osd_key_fini(const struct lu_context *ctx,
 			if (info->oti_dio_pages[i])
 				__free_page(info->oti_dio_pages[i]);
 		}
-		OBD_FREE(info->oti_dio_pages,
-			 sizeof(struct page *) * PTLRPC_MAX_BRW_PAGES);
+		OBD_FREE_LARGE(info->oti_dio_pages,
+			       sizeof(struct page *) * PTLRPC_MAX_BRW_PAGES);
 	}
 
 	if (info->oti_inode != NULL)
