lustre/osd-ldiskfs/osd_io.c
@@ -850,8 +850,9 @@ static int osd_bufs_get(const struct lu_env *env, struct dt_object *dt,
 
 	if (!osd_use_page_cache(osd_obj2dev(obj))) {
 		if (unlikely(!oti->oti_dio_pages)) {
-			OBD_ALLOC(oti->oti_dio_pages,
-				  sizeof(struct page *) * PTLRPC_MAX_BRW_PAGES);
+			OBD_ALLOC_LARGE(oti->oti_dio_pages,
+					sizeof(struct page *) *
+					PTLRPC_MAX_BRW_PAGES);
 			if (!oti->oti_dio_pages)
 				return -ENOMEM;
 		}
